2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/libc/sys/rtems/sys/param.h: Update some parameters to
	the latest FreeBSD values.

2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/machine/_types.h (_HAVE_SYSTYPES): Define.

2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/include/limits.h (_POSIX_HOST_NAME_MAX):
	Define.

2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/machine/_types.h (__dev_t): Define.
	(__dev_t_defined) Likewise.
	* libc/include/sys/_types.h (__dev_t): Delete RTEMS specific
	definition.

2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/sys/rtems/machine/_types.h (_ssize_t): Delete.
	(__ssize_t_defined) Likewise.

2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/machine/_default_types.h (__int8_t): Define via
	<stdint.h> provided type.
	(__uint8_t): Likewise.
	(__int8_least_t): Likewise.
	(__uint8_least_t): Likewise.
	(__int16_t): Likewise.
	(__uint16_t): Likewise.
	(__int16_least_t): Likewise.
	(__uint16_least_t): Likewise.
	(__int32_t): Likewise.
	(__uint32_t): Likewise.
	(__int32_least_t): Likewise.
	(__uint32_least_t): Likewise.
	(__int64_t): Likewise.
	(__uint64_t): Likewise.

2013-10-10  Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libc/include/paths.h (_PATH_DEVNULL): Define.
	(_PATH_DEVZERO): Likewise.

2013-10-09  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* testsuite/newlib.wctype/twctype.c (main): Update
	iswprint(0xce2) test case.

2013-10-03  Steve Ellcey  <sellcey@mips.com>

	* libc/machine/mips/memset.c: Remove.
	* libc/machine/mips/memset.S: New.
	* libc/machine/mips/Makefile.am: Change memset.c to memset.S
	* libc/machine/mips/Makefile.in: Regenerate.

2013-10-01  Petr Hosek  <phosek@chromium.org>

	* configure.host: Disable new posix_spawn function for all
	users of posix dir except Cygwin.