@@ -6,6 +6,7 @@
 # define _SYS_PARAM_H
 
 #include <sys/config.h>
+#include <sys/syslimits.h>
 #include <machine/endian.h>
 #include <machine/param.h>
 
@@ -18,6 +19,8 @@
 #ifndef PATHSIZE
 # define PATHSIZE (1024)
 #endif
+
+#define MAXPATHLEN PATH_MAX
 
 #define MAX(a,b) ((a) > (b) ? (a) : (b))
 #define MIN(a,b) ((a) < (b) ? (a) : (b))
